bpo-44378: Fix a compiler warning in Py_IS_TYPE() (GH-26644)

Py_IS_TYPE() no longer uses Py_TYPE() to avoid a compiler warning:
no longer cast "const PyObject*" to "PyObject*".
(cherry picked from commit 304dfec8d3c0763734ea8b5fa2af1d9e1ce69ffa)

Co-authored-by: Victor Stinner <vstinner@python.org>